Solved input overflow problem

--- a/src/components/Input/Input.css
+++ b/src/components/Input/Input.css
@@ -1,4 +1,6 @@
 .Input {
+  box-sizing: border-box !important;
+  overflow: hidden;
   margin-right: 4px;
   height: 40px;
   width: 187px;
